# pwn

./: README.md
1337up/floormats/: .gdb_history  exp.py  floormats.i64
1337up/hidden/: .gdb_history  chall.i64  exp.py
1337up/maltigriti/: .gdb_history  exp.py
1337up/over_the_edge/: test.py
1337up/reading_in_the_dark/: .gdb_history  RITD  RITD.i64  exp.py  libc.so.6  solve.py
1337up/smileymaze/: README.md
New folder/callme/: libc.so.6
acsc/evalbox/: app.py  flag.txt
acsc/re/: .gdb_history  chall
acsc/vaccine/: Dockerfile
amateurs/ELFcrafting/: .gdb_history  chal.i64  exp.py
amateurs/ELFcrafting_2/: .gdb_history  a  a.c  bruh  chal.i64  exp.py  shell  shell.asm  test
amateurs/hex_converter/: chal  exp.py  flag.txt
amateurs/hex_converter_2/: .gdb_history  exp.py
amateurs/i_love_ffi/: .gdb_history  exp.py
amateurs/perfect_sandbox/: .gdb_history  exp.py
amateurs/permissions/: .gdb_history  chal.i64  exp.py
amateurs/rntk/: .gdb_history  chal.i64  exp.py
amateurs/simple_heap/: chal.i64
ascis/pwn1/: exp.py  pwn.i64
ascis/pwn2/: .gdb_history  exp.py  pwn2.i64
ascis/pwn3/: .gdb_history  exp.py  pwn3.i64  pwn3_patched  solve.py
bandit/easy/: exp.py
bandit/med/: .gdb_history  peda-session-med.txt
bkctf/babyservice/: Dockerfile  build_docker.sh
collage/: babyintercept.txt  embryoasm template.txt  http self writeup.txt  pwncollage c template.txt
enowars/services/yvm/src/: classpool.ml  dune  exc.ml  jinterpreter.ml  jparser.ml  native.ml  yvm.ml
ructf/: perune.tar
self/: Book1.xlsx  self.rar
tmp/: Down_the_rabbit_hole.dup
(+1063 files in other folders)
