(executable
 (name yvm)
 (public_name yvm)
 (package yvm)
 (modules yvm)
 (libraries yvm_lib))

(library
 (name yvm_lib)
 (modules :standard \ yvm)
 (libraries unix)
 (instrumentation
  (backend bisect_ppx))
 (preprocess
  (pps ppx_deriving.show)))

(env
 (dev
  (flags
   (:standard -warn-error -A)))
 (fuzz
  (ocamlopt_flags -afl-instrument)))
